--- a/Lab6-solution.Rmd
+++ b/Lab6-solution.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 6 - La Quinta is Spanish for next to Denny's, Pt. 1"
 subtitle: "Visualizing spatial data"
-author: Musab Isah
+author: manar mansour
 output: pdf_document
 ---
 
-Student ID: 
+Student ID:2201002883 
 
 
 ```{r include = FALSE}
@@ -15,8 +15,8 @@ knitr::opts_chunk$set(eval = TRUE)
 Load the needed packages. Note: dsbox is not yet on CRAN. For now, you need to install it before you load the library. Uncomment, by deleting # from, the two lines of code below.
 
 ```{r message = FALSE}
-#install.packages("devtools")
-#devtools::install_github("rstudio-education/dsbox")
+install.packages("devtools")
+devtools::install_github("rstudio-education/dsbox")
 ```
 
 Load the libraries here.
@@ -52,7 +52,7 @@ dim(dennys)
     
 ```{r}
 dim(laquinta)
-#head(laquinta)
+head(laquinta)
 ```
 \textcolor{red}{This dataset has 909 rows and 6 columns. Each row represents location information about laquinta's hotel.}
 
